Add db path as env var.

--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,23 +32,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4227</td>\n",
+       "      <td>57841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2371232</td>\n",
+       "      <td>511201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>14666430</td>\n",
+       "      <td>403203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1310531</td>\n",
+       "      <td>47730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>453584</td>\n",
+       "      <td>399213</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -56,14 +56,14 @@
       ],
       "text/plain": [
        "   article_id\n",
-       "0        4227\n",
-       "1     2371232\n",
-       "2    14666430\n",
-       "3     1310531\n",
-       "4      453584"
+       "0       57841\n",
+       "1      511201\n",
+       "2      403203\n",
+       "3       47730\n",
+       "4      399213"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
     "load_dotenv()\n",
     "\n",
     "client = OpenAI(api_key=os.environ.get('OPENAI_API_KEY'))\n",
-    "DB_PATH = 'data/data.db'\n",
+    "DB_PATH = '../backend/data.db'\n",
     "\n",
     "conn = sqlite3.Connection(DB_PATH)\n",
     "cur = conn.cursor()\n",
