Add embeddings index.

--- a/preprocessing/migrations.ipynb
+++ b/preprocessing/migrations.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "2557c701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_PATH = '../backend/data.db'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "bae9bb37",
    "metadata": {},
@@ -20,7 +30,7 @@
     "import sqlite3\n",
     "\n",
     "try:\n",
-    "    conn = sqlite3.Connection('data/data.db')\n",
+    "    conn = sqlite3.Connection(DB_PATH)\n",
     "    cursor = conn.cursor()\n",
     "\n",
     "    statements = [\n",
@@ -114,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cb42cd18",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
+    "conn = sqlite3.Connection(DB_PATH)\n",
     "\n",
     "pd.read_parquet('data/articles_top5_len40_stride15.parquet') \\\n",
     "    .rename(columns={'lower_title': 'clean_title'}) \\\n",
@@ -141,7 +151,7 @@
     "import pandas as pd\n",
     "import json \n",
     "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
+    "conn = sqlite3.Connection(DB_PATH)\n",
     "\n",
     "buffer = []\n",
     "with open('data/chunks_top5_len40_stride15.jsonl', 'r') as file:\n",
@@ -163,22 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "141a42de",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
+    "conn = sqlite3.Connection(DB_PATH)\n",
     "\n",
     "indices = [\n",
     "    'create index idx_articles_article_id on articles(article_id)',\n",
     "    'create index idx_articles_count on articles(count)',\n",
     "    'create index idx_chunks_article_id on chunks(article_id)',\n",
     "    'create index idx_chunks_chunk_id on chunks(chunk_id)',\n",
-    "    # 'create index idx_embeddings_article_id on embeddings(article_id)',\n",
-    "    # 'create index idx_embeddings_chunk_id on embeddings(chunk_id)'\n",
+    "    'create index idx_embeddings_article_id on embeddings(article_id)',\n",
+    "    'create index idx_embeddings_chunk_id on embeddings(chunk_id)'\n",
     "]\n",
     "\n",
     "for index in indices:\n",
