--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,44 +26,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>article_id</th>\n",
+       "      <th>count(*)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>57841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>511201</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>403203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>47730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>399213</td>\n",
+       "      <td>26947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   article_id\n",
-       "0       57841\n",
-       "1      511201\n",
-       "2      403203\n",
-       "3       47730\n",
-       "4      399213"
+       "   count(*)\n",
+       "0     26947"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,9 +74,12 @@
     "# \"\"\", (19017269,))\n",
     "# chunks = ' '.join([x[0] for x in cur.fetchall()]).split()\n",
     "\n",
-    "pd.read_sql(\"\"\"select article_id from articles \n",
-    "            where count > 50 and count < 150\n",
-    "            order by random() limit 5\"\"\", conn)\n",
+    "pd.read_sql(\"\"\"\n",
+    "    select count(*) \n",
+    "    from articles \n",
+    "    where count > 50 and count < 150\n",
+    "    order by random() limit 5\n",
+    "\"\"\", conn)\n",
     "\n",
     "# pd.read_sql(\"select * from articles where title like '%seinfeld%' order by count desc\"\"\", conn)\n",
     "\n",
