--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,39 +26,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count(*)</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>clean_title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>26947</td>\n",
+       "      <td>619666</td>\n",
+       "      <td>SHARK</td>\n",
+       "      <td>shark</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/SHARK</td>\n",
+       "      <td>196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count(*)\n",
-       "0     26947"
+       "   article_id  title clean_title                                  url  count\n",
+       "0      619666  SHARK       shark  https://en.wikipedia.org/wiki/SHARK    196"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from flask import Flask, jsonify\n",
     "import sqlite3\n",
-    "from markupsafe import escape\n",
-    "from flask_cors import CORS\n",
-    "from copy import deepcopy\n",
-    "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import os \n",
-    "from collections import Counter\n",
     "import pandas as pd\n",
     "load_dotenv()\n",
     "\n",
@@ -75,10 +77,9 @@
     "# chunks = ' '.join([x[0] for x in cur.fetchall()]).split()\n",
     "\n",
     "pd.read_sql(\"\"\"\n",
-    "    select count(*) \n",
+    "    select *\n",
     "    from articles \n",
-    "    where count > 50 and count < 150\n",
-    "    order by random() limit 5\n",
+    "    where article_id == 619666\n",
     "\"\"\", conn)\n",
     "\n",
     "# pd.read_sql(\"select * from articles where title like '%seinfeld%' order by count desc\"\"\", conn)\n",
