Update target vecs.

--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -36,22 +36,115 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>619666</td>\n",
-       "      <td>SHARK</td>\n",
-       "      <td>shark</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/SHARK</td>\n",
-       "      <td>196</td>\n",
+       "      <td>408362</td>\n",
+       "      <td>American Music Awards</td>\n",
+       "      <td>american music awards</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/American%20Music...</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4721</td>\n",
+       "      <td>British Empire</td>\n",
+       "      <td>british empire</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/British%20Empire</td>\n",
+       "      <td>1920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64485</td>\n",
+       "      <td>New Spain</td>\n",
+       "      <td>new spain</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/New%20Spain</td>\n",
+       "      <td>518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50556</td>\n",
+       "      <td>James IV of Scotland</td>\n",
+       "      <td>james iv of scotland</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/James%20IV%20of%...</td>\n",
+       "      <td>148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>72297</td>\n",
+       "      <td>Lebensraum</td>\n",
+       "      <td>lebensraum</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Lebensraum</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>129195</td>\n",
+       "      <td>Alnwick</td>\n",
+       "      <td>alnwick</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Alnwick</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1181466</td>\n",
+       "      <td>Treccani</td>\n",
+       "      <td>treccani</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Treccani</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1007676</td>\n",
+       "      <td>The Dean Martin Show</td>\n",
+       "      <td>the dean martin show</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The%20Dean%20Mar...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>310824</td>\n",
+       "      <td>Marshal of France</td>\n",
+       "      <td>marshal of france</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Marshal%20of%20F...</td>\n",
+       "      <td>242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>180466</td>\n",
+       "      <td>EasyJet</td>\n",
+       "      <td>easyjet</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/EasyJet</td>\n",
+       "      <td>137</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   article_id  title clean_title                                  url  count\n",
-       "0      619666  SHARK       shark  https://en.wikipedia.org/wiki/SHARK    196"
+       "   article_id                  title            clean_title  \\\n",
+       "0      408362  American Music Awards  american music awards   \n",
+       "1        4721         British Empire         british empire   \n",
+       "2       64485              New Spain              new spain   \n",
+       "3       50556   James IV of Scotland   james iv of scotland   \n",
+       "4       72297             Lebensraum             lebensraum   \n",
+       "5      129195                Alnwick                alnwick   \n",
+       "6     1181466               Treccani               treccani   \n",
+       "7     1007676   The Dean Martin Show   the dean martin show   \n",
+       "8      310824      Marshal of France      marshal of france   \n",
+       "9      180466                EasyJet                easyjet   \n",
+       "\n",
+       "                                                 url  count  \n",
+       "0  https://en.wikipedia.org/wiki/American%20Music...    146  \n",
+       "1     https://en.wikipedia.org/wiki/British%20Empire   1920  \n",
+       "2          https://en.wikipedia.org/wiki/New%20Spain    518  \n",
+       "3  https://en.wikipedia.org/wiki/James%20IV%20of%...    148  \n",
+       "4           https://en.wikipedia.org/wiki/Lebensraum     97  \n",
+       "5              https://en.wikipedia.org/wiki/Alnwick     61  \n",
+       "6             https://en.wikipedia.org/wiki/Treccani     64  \n",
+       "7  https://en.wikipedia.org/wiki/The%20Dean%20Mar...     68  \n",
+       "8  https://en.wikipedia.org/wiki/Marshal%20of%20F...    242  \n",
+       "9              https://en.wikipedia.org/wiki/EasyJet    137  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,12 +172,118 @@
     "pd.read_sql(\"\"\"\n",
     "    select *\n",
     "    from articles \n",
-    "    where article_id == 619666\n",
+    "    where count > 60\n",
+    "    order by random()\n",
+    "    limit 10\n",
     "\"\"\", conn)\n",
     "\n",
     "# pd.read_sql(\"select * from articles where title like '%seinfeld%' order by count desc\"\"\", conn)\n",
     "\n",
     "# cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"article_id\": 39626432, \"count\": -1}\n",
+      "{\"article_id\": 463734, \"count\": -1}\n",
+      "{\"article_id\": 42898, \"count\": -1}\n",
+      "{\"article_id\": 4068, \"count\": -1}\n",
+      "{\"article_id\": 191280, \"count\": -1}\n",
+      "{\"article_id\": 163115, \"count\": -1}\n",
+      "{\"article_id\": 44940, \"count\": -1}\n",
+      "{\"article_id\": 87219, \"count\": -1}\n",
+      "{\"article_id\": 3254510, \"count\": -1}\n",
+      "{\"article_id\": 62092, \"count\": -1}\n",
+      "{\"article_id\": 371248, \"count\": -1}\n",
+      "{\"article_id\": 1776, \"count\": -1}\n",
+      "{\"article_id\": 210560, \"count\": -1}\n",
+      "{\"article_id\": 265554, \"count\": -1}\n",
+      "{\"article_id\": 23545010, \"count\": -1}\n",
+      "{\"article_id\": 52135, \"count\": -1}\n",
+      "{\"article_id\": 48146, \"count\": -1}\n",
+      "{\"article_id\": 158548, \"count\": -1}\n",
+      "{\"article_id\": 2541904, \"count\": -1}\n",
+      "{\"article_id\": 100627, \"count\": -1}\n",
+      "{\"article_id\": 295855, \"count\": -1}\n",
+      "{\"article_id\": 5261, \"count\": -1}\n",
+      "{\"article_id\": 3969, \"count\": -1}\n",
+      "{\"article_id\": 72890, \"count\": -1}\n",
+      "{\"article_id\": 47700, \"count\": -1}\n",
+      "{\"article_id\": 45772, \"count\": -1}\n",
+      "{\"article_id\": 145804, \"count\": -1}\n",
+      "{\"article_id\": 980865, \"count\": -1}\n",
+      "{\"article_id\": 82061, \"count\": -1}\n",
+      "{\"article_id\": 143912, \"count\": -1}\n",
+      "{\"article_id\": 31329803, \"count\": -1}\n",
+      "{\"article_id\": 189322, \"count\": -1}\n",
+      "{\"article_id\": 19156272, \"count\": -1}\n",
+      "{\"article_id\": 586015, \"count\": -1}\n",
+      "{\"article_id\": 18717883, \"count\": -1}\n",
+      "{\"article_id\": 178690, \"count\": -1}\n",
+      "{\"article_id\": 36536119, \"count\": -1}\n",
+      "{\"article_id\": 991, \"count\": -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"\"\"\t210560\tWhey\n",
+    "2541904\tGuanzhong\n",
+    "586015\tDeloitte\t\n",
+    "47700\tCoral\t\n",
+    "31329803 The Weeknd\n",
+    "463734\tPublic health\n",
+    "82061\tTina Turner\t\n",
+    "191280\tPrivate equity\t\n",
+    "72890\tUtah Jazz\n",
+    "52135\tPneumonia\n",
+    "4068\tBlaise Pascal\n",
+    "62092\tTrotskyism\n",
+    "\t158548\tEarth Day\n",
+    "100627\tEmo\n",
+    "45772\tRocky\n",
+    "39626432\tEdward Snowden\n",
+    "1776\tArthritis\t\n",
+    "991\tAbsolute value\n",
+    "18717883\tJodie Foster\n",
+    "5261\tCeltic music\t\n",
+    "42898\tAnthrax\t\n",
+    "371248\tPrussia\t\n",
+    "163115\tInterest rate\n",
+    "295855\tCatechism\n",
+    "48146\tFossil fuel\n",
+    "36536119 ResearchGate\n",
+    "3969 Buckingham Palace\t\n",
+    "23545010 Insane Clown Posse\t\n",
+    "178690 Steamboat\n",
+    "980865 Rust Belt\t\n",
+    "143912\tReindeer\t\n",
+    "145804\tCivilian\n",
+    "87219\tLeVar Burton\n",
+    "265554\tIgbo people\n",
+    "3254510\tScala (programming language)\n",
+    "189322\tJeb Bush\n",
+    "44940\tWorld Heritage Site\n",
+    "19156272 Labor Day\"\"\"\n",
+    "\n",
+    "ids = []\n",
+    "for line in x.split('\\n'):\n",
+    "    article_id, title = line.strip().split(maxsplit=1)\n",
+    "    article_id = article_id.strip()\n",
+    "    ids.append(article_id)\n",
+    "\n",
+    "import random \n",
+    "\n",
+    "while ids:\n",
+    "    id = random.choice(ids)\n",
+    "    ids.remove(id)\n",
+    "    print('{' + f'\"article_id\": {id}, \"count\": -1' + '}')"
    ]
   },
   {
