--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,6 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"article_id\": 18717883, \"count\": -1}\n",
+      "{\"article_id\": 178690, \"count\": -1}\n",
+      "{\"article_id\": 36536119, \"count\": -1}\n",
+      "{\"article_id\": 991, \"count\": -1}\n",
+      "{\"article_id\": 39626432, \"count\": -1}\n",
+      "{\"article_id\": 463734, \"count\": -1}\n",
+      "{\"article_id\": 42898, \"count\": -1}\n",
+      "{\"article_id\": 4068, \"count\": -1}\n",
+      "{\"article_id\": 191280, \"count\": -1}\n",
+      "{\"article_id\": 163115, \"count\": -1}\n",
+      "{\"article_id\": 44940, \"count\": -1}\n",
+      "{\"article_id\": 87219, \"count\": -1}\n",
+      "{\"article_id\": 3254510, \"count\": -1}\n",
+      "{\"article_id\": 62092, \"count\": -1}\n",
+      "{\"article_id\": 371248, \"count\": -1}\n",
+      "{\"article_id\": 1776, \"count\": -1}\n",
+      "{\"article_id\": 210560, \"count\": -1}\n",
+      "{\"article_id\": 265554, \"count\": -1}\n",
+      "{\"article_id\": 23545010, \"count\": -1}\n",
+      "{\"article_id\": 52135, \"count\": -1}\n",
+      "{\"article_id\": 48146, \"count\": -1}\n",
+      "{\"article_id\": 158548, \"count\": -1}\n",
+      "{\"article_id\": 2541904, \"count\": -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "js = []\n",
+    "with open('../backend/ai_targets.jsonl', 'r') as file:\n",
+    "    for i, line in enumerate(file):\n",
+    "        if line.strip() == '':\n",
+    "            continue\n",
+    "        print(line.strip())\n",
+    "        j = json.loads(line.strip())\n",
+    "        j['day'] = i + 1\n",
+    "        del(j['count'])\n",
+    "        js.append(j)\n",
+    "\n",
+    "with open('../backend/targets.jsonl', 'w', encoding='utf-8') as file:\n",
+    "    for j in js:\n",
+    "        file.write(json.dumps(j) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 144,
    "metadata": {},
    "outputs": [
