Update preprocessing and colors

--- a/preprocessing/download_chunk.ipynb
+++ b/preprocessing/download_chunk.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "def select_top_counts(min_count):\n",
     "    selected = {}\n",
-    "    with open('../transformed/data/links.txt', 'r', encoding='utf-8', errors='replace') as file:\n",
+    "    with open('data/links.txt', 'r', encoding='utf-8', errors='replace') as file:\n",
     "        for line in file:\n",
     "            try:\n",
     "                # Filter out hashtag pages\n",
@@ -194,6 +194,18 @@
     "    df = pd.concat([df, filter_df(pd.read_parquet(f'wiki/{file}'), selected)], axis=0)\n",
     "df = df.drop_duplicates(['article_id'])\n",
     "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = selected.merge(df[['article_id', 'lower_title']], on='lower_title', how='left')\n",
+    "m = m[m.article_id.isna()]\n",
+    "m.to_parquet('data/selected_missing.parquet')\n",
+    "del(m)"
    ]
   },
   {
