update intro message

--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,9 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "conn = sqlite3.Connection('../backend/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "df = pd.read_parquet('data/scrape_articles_top5_len40_stride15.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "conn = sqlite3.Connection('../backend/data.db')\n",
+    "cur = conn.cursor()\n",
+    "# df = pd.read_csv('data/scrape_articles_top5_len40_stride15.csv')\n",
+    "# df = df[~df.clean_title.isna()]\n",
+    "# df[df.clean_title.str.contains('tom c')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Anarchism is a political philosophy and movement that is skeptical of all justifications for authority and seeks to abolish the institutions it claims maintain unnecessary coercion and hierarchy, typically including nation-states, and capitalism. Anarchism advocates for the replacement of the'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "import sqlite3\n",
@@ -22,10 +77,11 @@
     "#     limit 100\n",
     "# \"\"\", conn)\n",
     "\n",
-    "# pd.read_sql(\"\"\"\n",
-    "#     select distinct count(article_id)\n",
-    "#     from articles\n",
-    "# \"\"\", conn)\n",
+    "pd.read_sql(\"\"\"\n",
+    "    select *\n",
+    "    from chunks\n",
+    "    limit 1\n",
+    "\"\"\", conn).iloc[0]['chunk']\n",
     "\n",
     "# cur.execute(\"\"\"\n",
     "# DELETE FROM articles\n",
@@ -42,13 +98,12 @@
     "#   FROM chunks\n",
     "#   GROUP BY chunk_id\n",
     "# );\"\"\")\n",
-    "\n",
-    "conn.commit()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,32 +127,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count(article_id)</th>\n",
+       "      <th>count(*)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>501716</td>\n",
+       "      <td>52537512</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count(article_id)\n",
-       "0             501716"
+       "   count(*)\n",
+       "0  52537512"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_sql(\"\"\"\n",
-    "    select distinct count(article_id)\n",
-    "    from articles\n",
+    "    select count(*)\n",
+    "    from chunks\n",
     "\"\"\", conn)"
    ]
   },
