Update image and opacity

--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,13 @@
     "conn = sqlite3.Connection('../backend/data.db')\n",
     "cur = conn.cursor()\n",
     "\n",
-    "df = pd.read_parquet('data/scrape_articles_top5_len40_stride15.parquet')"
+    "# pd.read_sql(\"\"\"\n",
+    "#     select article_id, title \n",
+    "#     from articles \n",
+    "#     where count > 20\n",
+    "#     order by random()\n",
+    "#     limit 15\n",
+    "# \"\"\", conn)"
    ]
   },
   {
