--- a/preprocessing/7_make_db.ipynb
+++ b/preprocessing/7_make_db.ipynb
@@ -12,12 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bae9bb37",
+   "execution_count": null,
+   "id": "256bb2c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOP_N = 50"
+    "MIN_COUNT = 30\n",
+    "STRIDE = 20\n",
+    "LENGTH = 40"
    ]
   },
   {
@@ -119,7 +121,7 @@
     "\n",
     "\n",
     "# insert_embeddings('data/embeddings2.jsonl', insert_statement)\n",
-    "# insert_embeddings('data/embeddings3.jsonl', insert_statement)"
+    "# insert_embeddings('data/embeddings3.jsonl', insert_statement)\n"
    ]
   },
   {
@@ -133,7 +135,7 @@
     "\n",
     "conn = sqlite3.Connection(DB_PATH)\n",
     "\n",
-    "pd.read_parquet('data/articles_top5_len40_stride15.parquet') \\\n",
+    "pd.read_parquet(f'data/articles_top{MIN_COUNT}_len{LENGTH}_stride{STRIDE}.parquet') \\\n",
     "    .rename(columns={'lower_title': 'clean_title'}) \\\n",
     "    .to_sql('articles', conn, if_exists='append', index=False)\n",
     "\n",
@@ -154,7 +156,7 @@
     "conn = sqlite3.Connection(DB_PATH)\n",
     "\n",
     "buffer = []\n",
-    "with open('data/chunks_top5_len40_stride15.jsonl', 'r') as file:\n",
+    "with open(f'data/chunks_top{MIN_COUNT}_len{LENGTH}_stride{STRIDE}.jsonl', 'r') as file:\n",
     "    for line in file:\n",
     "        buffer.append(json.loads(line))\n",
     "\n",
