--- a/preprocessing/7_make_db.ipynb
+++ b/preprocessing/7_make_db.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "2557c701",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_PATH = 'data/data.db'"
+    "DB_PATH = '../backend/data.db'"
    ]
   },
   {
@@ -9620,6 +9620,50 @@
     "conn.commit()\n",
     "\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ab5a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Migration\n",
+    "\n",
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection(DB_PATH)\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(\"drop table if exists guesses\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    create table if not exists guesses (\n",
+    "        guess_id integer primary key,\n",
+    "        created_timestamp integer,\n",
+    "        guess_article_id integer,\n",
+    "        target_article_id integer,\n",
+    "        best_chunk_id integer,\n",
+    "        best_chunk_score real,\n",
+    "        session_id text\n",
+    "    )\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "# Make sure all the filters and joined in server.go are indexed\n",
+    "indices = [\n",
+    "    'create index idx_guesses_guess_article_id on guesses(guess_article_id)',\n",
+    "    'create index idx_guesses_created_timestamp on guesses(created_timestamp)'\n",
+    "]\n",
+    "\n",
+    "for index in indices:\n",
+    "    conn.execute(index)\n",
+    "    conn.commit()\n",
+    "\n",
+    "conn.close()\n"
    ]
   }
  ],
