--- a/preprocessing/7_make_db.ipynb
+++ b/preprocessing/7_make_db.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "256bb2c0",
    "metadata": {},
    "outputs": [],
@@ -9624,7 +9624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "41ab5a42",
    "metadata": {},
    "outputs": [],
@@ -9653,10 +9653,26 @@
     "\"\"\")\n",
     "conn.commit()\n",
     "\n",
+    "cur.execute(\"drop table if exists wins\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    create table if not exists wins (\n",
+    "        created_timestamp integer,\n",
+    "        guesses integer,\n",
+    "        session_id text\n",
+    "    )\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
     "# Make sure all the filters and joined in server.go are indexed\n",
     "indices = [\n",
     "    'create index idx_guesses_guess_article_id on guesses(guess_article_id)',\n",
-    "    'create index idx_guesses_created_timestamp on guesses(created_timestamp)'\n",
+    "    'create index idx_guesses_created_timestamp on guesses(created_timestamp)',\n",
+    "    'create index idx_guesses_session_id on guesses(session_id)',\n",
+    "\n",
+    "    'create index idx_wins_created_timestamp on wins(created_timestamp)',\n",
+    "    'create index idx_wins_session_id on wins(session_id)'\n",
     "]\n",
     "\n",
     "for index in indices:\n",
