Update to typescript and add stats modules to server.

--- a/preprocessing/7_make_db.ipynb
+++ b/preprocessing/7_make_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2557c701",
    "metadata": {},
    "outputs": [],
@@ -9624,7 +9624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "41ab5a42",
    "metadata": {},
    "outputs": [],
@@ -9665,6 +9665,17 @@
     "\"\"\")\n",
     "conn.commit()\n",
     "\n",
+    "cur.execute(\"drop table if exists sessions\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    create table if not exists sessions (\n",
+    "        created_timestamp integer,\n",
+    "        session_id text\n",
+    "    )\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
     "# Make sure all the filters and joined in server.go are indexed\n",
     "indices = [\n",
     "    'create index idx_guesses_guess_article_id on guesses(guess_article_id)',\n",
@@ -9672,7 +9683,10 @@
     "    'create index idx_guesses_session_id on guesses(session_id)',\n",
     "\n",
     "    'create index idx_wins_created_timestamp on wins(created_timestamp)',\n",
-    "    'create index idx_wins_session_id on wins(session_id)'\n",
+    "    'create index idx_wins_session_id on wins(session_id)',\n",
+    "\n",
+    "    'create index idx_sessions_created_timestamp on sessions(created_timestamp)',\n",
+    "    'create index idx_sessions_session_id on sessions(session_id)',\n",
     "]\n",
     "\n",
     "for index in indices:\n",
